ghc-4335c07/testsuite/tests/patsyn/should_fail/records-check-sels.stderr

records-check-sels.hs:10:7: error:
    Variable not in scope: a :: Maybe Bool -> t
